--- a/project1/index.html
+++ b/project1/index.html
@@ -1,1 +1,91 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Texas Hold'em (&copy;Steve Kang @ SEIF 2019)</title>
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <script src="app.js"></script>
+</head>
+
+<!-- <body background="Background.jpg"> -->
+<body>
+    <div class = "title">
+        <h1>Texas Hold'em</h1>
+    </div>
+
+    <div class="input-group mb-3">
+        <div class="input-group-append">
+            <!-- <input type="text" id="minAmount" class="minAmount" placeholder="Min Amount" aria-label="Min Amount" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="confirmAmtButton">Confirm</button>--> <s></s>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div id="dealerLabel" class="dealarLabel">
+            <img id="dealerBigBlind" src="../resources/bigblind2.png" class="bigBlind hide"/>
+            <div id="dealerBalance" class="badge badge-pill badge-info"></div>
+            <div>
+                <span>Dealer
+                <img id="dealerTurn" class="turn hide" src="../resources/cleaned/green.png"/></span>
+            </div>
+        </div>
+        <div id="dealer1" class="dealer dealer1"></div>
+        <div id="dealer2" class="dealer dealer2"></div>
+        <div id="dealerBet" class="dealerBet">
+            <div id="dealerBetLabel" class="badge badge-dark betLabel"></div>
+        </div>
+
+        <div id="community1" class="communityCards community1"></div>
+        <div id="community2" class="communityCards community2"></div>
+        <div id="community3" class="communityCards community3"></div>
+        <div id="community4" class="communityCards community4"></div>
+        <div id="community5" class="communityCards community5"></div>
+
+        <div id="tableBet" class="tableBet tableLabel">
+            <div id="status" class="status">
+            </div>
+
+            <img class="chipImg blueChip hide" src="../resources/cleaned/blue-chip-25-transparent.png"/>
+            <img class="chipImg greenChip hide" src="../resources/cleaned/green-chip-50-transparent.png"/>
+            <img class="chipImg blackChip hide" src="../resources/cleaned/black-chip-100-transparent.png"/>
+            <img class="chipImg redChip hide" src="../resources/cleaned/red-chip-200-transparent.png"/>
+            <br/><br/><div id="tableBetLabel" class="badge badge-dark betLabel"></div>
+        </div>
+
+        <div id="blueChipArea" class="chip blueChipArea"></div>
+        <div id="greenChipArea" class="chip greenChipArea"></div>
+        <div id="blackChipArea" class="chip blackChipArea"></div>
+        <div id="redChipArea" class="chip redChipArea"></div>
+
+        <div id="playerLabel" class="playerLabel">
+            <img id="playerBigBlind" src="../resources/bigblind2.png" class="bigBlind hide"/>
+            <div id="playerBalance" class="badge badge-pill badge-info"></div>
+            <div>
+                <span>Player
+                <img id="playerTurn" class="turn hide" src="../resources/cleaned/green.png"/></span>
+            </div>
+        </div>
+        <div id="player1" class="player player1"></div>
+        <div id="player2" class="player player2"></div>
+        <div id="playerBet" class="playerBet">
+            <div id="playerBetLabel" class="badge badge-dark betLabel"></div>
+        </div>
+
+        <div class="startButtonArea">
+            <button id="startBtn" type="button" class="btn btn-primary">New Game</button>
+            <button id="betCallBtn" type="button" class="btn btn-primary">Bet/Call</button>
+            <button id="checkBtn" type="button" class="btn btn-primary">Check</button>
+            <button id="raiseBtn" type="button" class="btn btn-primary">Raise</button>
+            <button id="foldBtn" type="button" class="btn btn-primary">Fold</button>
+            <button id="allInBtn" type="button" class="btn btn-primary">All-In</button>
+            <button id="calcWinnerBtn" type="button" class="btn btn-primary">Calculate Winner</button>
+        </div>
+    </div>
+</body>
+</html>
